# First_OpenGL_Proj

./: CMakeLists.txt  readme.md
include/glad/: glad.h
include/shader/: shader.hpp
resource/shader/: first_fragment_shader.fs  first_vertex_shader.vs
src/: glad.c
test/: main.cpp  two_triangle.cpp
